--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,7 @@ a{
 
 
 /* START MENU */
-#burger_menu nav{
+nav{
   height: 80px;
   width: 100%;
   display: flex;
@@ -302,19 +302,19 @@ a{
   padding-right: 10px;
 }
 
-#burger_menu label.logo img{
+label.logo img{
   line-height: 80px;
   padding: 0 100px;
 }
-#burger_menu  nav ul{
+nav ul{
   float: right;
 }
-#burger_menu nav ul li{
+nav ul li{
   display: inline-block;
   line-height: 80px;
   margin: 0 20px;
 }
-#burger_menu nav ul li a{
+nav ul li a{
   color: white;
   font-size: 18px; 
 }
@@ -348,14 +348,14 @@ a{
   .login-menu a{
     padding: 0;
   }
-  #burger_menu nav{
+  nav{
     display: flex;
     flex-direction: row-reverse;
   justify-content: space-between;
   padding-left: 10px;
   padding-right: 10px;
   }
-  #burger_menu ul{
+ul{
       position: fixed;
       width: 100%;
       height: 100vh;
@@ -365,12 +365,12 @@ a{
       text-align: center;
       transition: all .5s;
   }
-  #burger_menu nav ul li {
+  nav ul li {
       display: block;
       margin: 50px 0;
       line-height: 30px;
   }
-  #burger_menu nav ul li a{
+  nav ul li a{
       font-size: 20px;
       color: black;
   }
