--- a/styles.css
+++ b/styles.css
@@ -781,8 +781,8 @@ margin-top: 30%;
 }
 
 .profil_billede img{
-  width: 80%;
-  height: 100px;
+ width: 50%;
+ height: 50%;
   margin-bottom: 10%;
   margin-top: 10%;
 }
