--- a/styles.css
+++ b/styles.css
@@ -886,6 +886,16 @@ margin-top: 30%;
     border-color: #222;
     padding: 3px;
   }
+  .profil_postnummer{
+    font-size: 18px;
+    border-width: 1px;
+    height: 24px;
+    width: 200px;
+    border-style: solid;
+    border-color: #222;
+    padding: 3px;
+  }
+  
   .profil_email{
     font-size: 18px;
     border-width: 1px;
