--- a/styles.css
+++ b/styles.css
@@ -368,7 +368,7 @@ nav ul li a{
   padding-left: 10px;
   padding-right: 10px;
   }
-#burger_menu ul{
+ul{
       position: fixed;
       width: 100%;
       height: 100vh;
@@ -378,12 +378,12 @@ nav ul li a{
       text-align: center;
       transition: all .5s;
   }
-  #burger_menu nav ul li {
+nav ul li {
       display: block;
       margin: 50px 0;
       line-height: 30px;
   }
-  #burger_menu nav ul li a{
+ nav ul li a{
       font-size: 20px;
       color: black;
   }
