--- a/styles.css
+++ b/styles.css
@@ -732,9 +732,17 @@ margin-top: 30%;
   -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
 }
 
+
 #form-login{
   height: 500px;
   width: 100%;
+}
+
+@media (max-width:800px){
+  .container{
+    width: 290px;
+  }
+
 }
 
 /* SLUT - LOGIND */
