--- a/styles.css
+++ b/styles.css
@@ -824,16 +824,18 @@ margin-top: 30%;
 
 /* START - BOOKINGS */
 .bookings_container{
-  margin-top: 7%;
   display: flex;
+  justify-content: center;
+  margin-top: 10%;
+
+  
 }
 
 .kommende_container{
-    margin-top: -20%;
     margin-right: 10%;
-    margin-left: 15%;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-left: 15%; 
+    padding-left: 10%;
+    padding-right: 10%;
     border-radius: 10px;
     padding: 2%;
     box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
@@ -842,11 +844,10 @@ margin-top: 30%;
 }
 
 .tidligere_container{
-  margin-top: -20%;
   margin-right: 15%;
-  margin-right: 10%;
-  padding-left: 10px;
-  padding-right: 10px;
+  margin-right: 10%; 
+  padding-left: 10%;
+  padding-right: 10%;
   padding: 2%;
   border-radius: 10px;
   box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
