--- a/styles.css
+++ b/styles.css
@@ -541,12 +541,13 @@ height: 30px;
 
 .nyhedsbrev_afmeld-out{
   display: block;
+  text-align: center;
   background-color: var(--clr--background);
-  margin-left: 25%;
+  margin-left: 30%;
   margin-top: 5%;
   padding: 5%;
-  width: 50%;
-  height: 300%;
+  width: 40%;
+  height: 30%;
   border-radius: 5px;
   box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
@@ -555,7 +556,6 @@ height: 30px;
 
 .out_body{
   background-color: var(--clr--btn);
-
 }
 
 .nyhedsbrev_btn-afmeld{
@@ -564,7 +564,6 @@ height: 30px;
   border-radius: 8px;
   padding: 1px;
   width: 30%;
-  height: 20%;
   font-weight: var(--fw-reg);
   font-size: 14px;
   border: none;
