--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@
   -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
 }
 
+
 .opret {
   background-color: var(--clr--btn);
   width: 80%;
@@ -129,50 +130,9 @@
   border: 1px solid lightgrey;
 
 }
-.input_efternavn input{
-  width: 100px;
-}
-.input_email input{
-  width: 100px;
-}
-.input_brugernavn input{
-  width: 100px;
-}
-.input_by input{
-  width: 100px;
-}
-.input_postnummer input{
-  width: 100px;
-}
 
-.input_fornavn input{
-  width: 100px;
-}
-.input_adresse input{
-  width: 100px;
-}
-
-.input_mobilnummer input{
-  width: 100px;
-}
-.input_kon input{
-  width: 100px;
-}
-
-.input_brugernavn input{
-  height: 30px;
-  border: #222 solid 1px;
-} 
-
-.input_kode input{
-  width: 100px;
-}
-
-.input_gentagkode input{
-  width:100px;
-}
-.input_email input{
-  width:100px;
+#signup_input input{
+  width: 120px;
 }
 
 .har-profil{
@@ -738,8 +698,8 @@ nav ul li {
   background-color: #3B5998;
   color: white;
   border-radius: 50px;
-  width: 150px;
-  height: 33px;
+  width: 130px;
+  height: 37px;
   font-size: 10px;
   align-content: center;
 }
@@ -748,8 +708,8 @@ nav ul li {
   color: #222222;
   border: solid 1px rgb(97, 96, 96);
   border-radius: 50px;
-  width: 150px;
-  height: 33px;
+  width: 130px;
+  height: 37px;
   font-size: 10px;
   align-content: center;
 }
