--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,15 @@
   -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
 }
-
+.opretprofil{
+  text-align: center;
+  margin-top: 25px;
+  font-size: 25px;
+  font-weight: 500;
+}
+.har-profil a{
+  color: #ea5a4a;
+}
 
 .opret {
   background-color: var(--clr--btn);
@@ -128,7 +136,6 @@
   width: 100%;
   border-radius: 4px;
   border: 1px solid lightgrey;
-
 }
 
 #signup_input input{
@@ -149,7 +156,7 @@
   gap: 5px 5px;
   grid-auto-flow: row;
   grid-template-areas:
-    ". opretprofil opretprofil opretprofil opretprofil opretprofil opretprofil"
+    ". . opretprofil . . . ."
     ". google facebook . . . ."
     ". person-oplysninger person-oplysninger . logind-oplysninger logind-oplysninger ."
     ". fornavn efternavn . brugernavn . ."
@@ -290,6 +297,9 @@
 .har-profil{
   text-align: center;
 } 
+.har-profil a{
+  color: #ea5a4a;
+}
 
 }
 /* IPAD Grid SLUT*/
@@ -304,7 +314,7 @@
   gap: 5px 5px;
   grid-auto-flow: row;
   grid-template-areas:
-    ". opretprofil opretprofil opretprofil opretprofil opretprofil opretprofil opretprofil"
+    ". . . opretprofil opretprofil . . ."
     ". google facebook . . . . ."
     ". person-oplysninger person-oplysninger . logind-oplysninger logind-oplysninger . ."
     ". fornavn efternavn . brugernavn email email ."
@@ -434,76 +444,7 @@
 }
 }
 
-
 /* SLUT - LOGIND FUNKTION GRID*/
-
-
-/* START - STYLING AF OPRET PROFIL
-.opretprofil{
-  text-align: center;
-  margin-top: 25px;
-  font-size: 25px;
-  font-weight: 500;
-}
-
-.opret {
-  background-color: var(--clr--btn);
-  width: 80%;
-  text-align: center;
-  border-radius: 50px;
-  height: 30px;
-  border-style: none;
-  color: var(--clr--background);
-}
-
-.input{
-  width: 100%;
-  border-radius: 4px;
-  border: 1px solid lightgrey;
-
-}
-
-.input_efternavn input{
-  width: 200px;
-}
-
-.input_fornavn input{
-  width: 198px;
-  justify-content: flex-end;
-}
-
-.input_adresse input{
-  width: 200px;
-}
-
-.input_mobilnummer input{
-  width: 200px;
-}
-.input_kon input{
-  width: 200px;
-}
-
-.input_brugernavn input{
-  height: 30px;
-  border: #222 solid 1px;
-} 
-
-.input_kode input{
-  width: 200px;
-}
-
-.input_gentagkode input{
-  width: 200px;
-}
-
-.har-profil{
-  text-align: center;
-} 
-
-
- */
-
-/* SLUT - STYLING AF OPRET PROFIL */
 
 /* START - STYLING AF FORSIDE */
 ul{
@@ -526,7 +467,7 @@ nav{
   height: 80px;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -582,11 +523,12 @@ nav ul li a{
   .checkbtn{
      display: block;
      z-index: 999;
-     padding-top: 25px;
+     padding-top: 30px;
   }
   .checkbtn2{
     display: block;
     z-index: 999;
+    padding-top: 30px;
  }
   .login-menu a{
     padding: 0;
