--- a/styles.css
+++ b/styles.css
@@ -1170,37 +1170,39 @@ margin-top: 30%;
 
 .favoritter_container {  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 0.5fr 1fr 1fr 1fr 1fr 1fr;
   gap: 0px 0%;
   grid-auto-flow: row;
 }
 
 .profil_menu { grid-area: 1 / 1 / 2 / 10; }
 
-.profil_footer { grid-area: 10 / 1 / 11 / 10; }
+.profil_footer { grid-area: 7 / 1 / 8 / 10; }
 
 .favoritter_titel { grid-area: 2 / 4 / 3 / 7; }
 
-.favorit1_container { grid-area: 4 / 2 / 8 / 5; }
+.favorit1_container { grid-area: 3 / 2 / 7 / 5; }
 
-.favorit2_container { grid-area: 4 / 6 / 8 / 9; }
+.favorit2_container { grid-area: 3 / 6 / 7 / 9; }
 
-.hjerte1 { grid-area: 4 / 2 / 5 / 3; }
+.hjerte1 { grid-area: 3 / 2 / 4 / 3; }
 
-.favoritter_billede1 { grid-area: 4 / 2 / 7 / 5; }
+.favoritter_billede1 { grid-area: 3 / 2 / 6 / 5; }
 
-.favoritter_billede2 { grid-area: 4 / 6 / 7 / 9; }
+.favoritter_billede2 { grid-area: 3 / 6 / 6 / 9; }
 
-.hjerte2 { grid-area: 4 / 6 / 5 / 7; }
+.hjerte2 { grid-area: 3 / 6 / 4 / 7; }
 
-.favoritter_txt1 { grid-area: 7 / 2 / 8 / 5; }
+.favoritter_txt1 { grid-area: 6 / 2 / 7 / 5; }
 
-.favoritter_text2 { grid-area: 7 / 6 / 8 / 9; }
+.favoritter_text2 { grid-area: 6 / 6 / 7 / 9; }
+
 
 
 .favorit2_container {
   padding: 2%;
   border-radius: 5px;
+  height: 100%;
   box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
@@ -1210,6 +1212,7 @@ margin-top: 30%;
 .favorit1_container{
   padding: 2%;
   border-radius: 5px;
+  height: 100%;
   box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
@@ -1234,10 +1237,12 @@ margin-top: 30%;
 }
 
 .hjerte1{
+  padding: 2%;
   color: var(--clr--c2a);
 }
 
 .hjerte2{
+  padding: 2%;
   color: var(--clr--c2a);
 }
 
