--- a/styles.css
+++ b/styles.css
@@ -1170,7 +1170,7 @@ margin-top: 30%;
 
 .favoritter_container {  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 0.5fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: -1fr 0.5fr 1fr 1fr 1fr 1fr;
   gap: 0px 0%;
   grid-auto-flow: row;
 }
