--- a/styles.css
+++ b/styles.css
@@ -770,6 +770,7 @@ height: 30px;
   display: flex;
   justify-content: center;
   margin-top: 10%; 
+  margin-bottom: 20%;
 }
 
 .kontakt-call-to-action-2{
